--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "debug": "nodemon --inspect=0.0.0.0:9229 src/server.js",
-    "start": "npm-run-all -p nodemon browsersync",
-    "nodemon": "nodemon src/server.js",
+    "debug": "node --inspect=0.0.0.0:9229 src/server.js",
+    "start": "npm-run-all -p node browsersync",
+    "dev": "npm-run-all -p node browsersync",
+    "node": "node src/server.js",
     "browsersync": "browser-sync start --proxy http://localhost:5000 --files 'public, src/app/views'"
   },
   "keywords": [],
@@ -28,6 +29,7 @@
     "browser-sync": "^2.26.12",
     "eslint": "^7.26.0",
     "nodemon": "^2.0.4",
-    "npm-run-all": "^4.1.5"
+    "npm-run-all": "^4.1.5",
+    "node": "ˆ18.14.2"
   }
 }
