--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "debug": "nodemon --inspect=0.0.0.0:9229 src/server.js",
-    "start": "npm-run-all -p nodemon browsersync",
-    "nodemon": "nodemon src/server.js",
+    "debug": "node --inspect=0.0.0.0:9229 src/server.js",
+    "start": "npm-run-all -p node browsersync",
+    "node": "node src/server.js",
     "browsersync": "browser-sync start --proxy http://localhost:5000 --files 'public, src/app/views'"
   },
   "keywords": [],
