--- a/package.json
+++ b/package.json
@@ -23,13 +23,12 @@
     "multer": "^1.4.2",
     "nodemailer": "^6.4.16",
     "nunjucks": "^3.2.2",
-    "pg": "^8.3.3"
+    "pg": "^8.11.0"
   },
   "devDependencies": {
     "browser-sync": "^2.26.12",
     "eslint": "^7.26.0",
     "nodemon": "^2.0.4",
-    "npm-run-all": "^4.1.5",
-    "node": "ˆ18.14.2"
+    "npm-run-all": "^4.1.5"
   }
 }
